src/styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


:root {
    --lightblue: rgb(240, 205, 78);
    --reallylightblue:rgb(155, 244, 244);
    --blue: rgb(200, 21, 21);
    --red: rgb(233, 123, 123);
    --darkblue: rgb(98, 35, 29);
    --darkred: rgb(169, 88, 88);
}

body {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    display: flex;
    flex-direction: column;
    height: 100dvh;
    position: relative;
}

#content-container {
    width: 80%;
    max-width: 600px;
    margin: 5dvh auto;
    padding: 2dvh 0;
    background-color: whitesmoke;
    display: flex;
    flex-direction: column;
    box-shadow: 1px 1px 5px grey;
    
}

#content {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: var(--darkblue);
}

body::after {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    min-height: 100%;
    width: 100%;
    background-color: rgb(255, 255, 255);
    opacity: 0.5;
    z-index: -1;
}

body::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    min-height: 100%;
    width: 100%;
    background-image: var(--body-bg);
    background-size: cover;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.5;
    z-index: -1;
    filter: grayscale(100%);
}


#logo {
    background: linear-gradient(330deg, var(--lightblue), var(--blue) 70%, var(--darkblue));
    border-radius: 50%;
    width: 240px ;
    height: 140px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 5px solid whitesmoke;
    position: relative;
}

#logo::before {
    content: "";
    border-radius: 50%;
    width: 220px ;
    height: 120px;
    position: absolute;
    box-shadow: 2px 2px 0px whitesmoke;
}

#logo::after {
    content: "";
    border-radius: 50%;
    width: 220px ;
    height: 120px;
    position: absolute;
    box-shadow: -4px -4px 0 whitesmoke;
}

h1 {
    color: whitesmoke;
    -webkit-text-stroke: 2px var(--darkblue);
    text-shadow: 5px 5px 1px var(--darkblue);
    font-size: 70px;
    text-align: center;
    font-weight: 800;
    font-style: italic;
    z-index: 1;
}

#cereal-banner {
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 30dvh;
}

#nav-bar {
    display: flex;
    justify-content: center;
    gap: 8dvw;
    box-shadow: 1px 2px 10px grey;
    background-color: var(--blue);
    font-size: max(16px, 3dvh);
    color: whitesmoke;
    padding: min(5dvh, 12px);
    border-top: 3px solid var(--blue);
    
}

nav:hover {
    color: var(--lightblue);
    transform: scale(5px);
    text-decoration: underline;
    cursor: pointer;
}

nav:focus, nav:active {
    color: rgb(141, 0, 0);
    text-decoration: underline;
    cursor: pointer;
}

nav {
    font-weight: bold;
    text-shadow: 2px 2px 0 var(--darkblue);
    
}

.content-bubble {
    width: 70%;
    max-width: 600px;
    margin: 2dvh 1dvh 1dvh 1dvh;
    padding: 2dvh;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--blue);
    
}

.img-bubble {
    width: 120px;
    height: 120px;
    border: 4px solid whitesmoke;
    border-radius: 12px;

}

.content-bubble * {
    padding: 1.5dvh 1dvh;
    color: whitesmoke;
}

.italics {
    font-style: italic;
}
.author {
    align-self: flex-end;
}

.contact {
    align-self: flex-start;
}
#footer {
    background-color: var(--blue);
    height: 3dvh;
    width: 100%;
    margin-left: auto;
}
@media (min-width: 1000px) {
    .content-bubble {
        max-width: 30dvw;
    }
    
}

@media (max-width: 700px) {
    #content-container {
        padding: 12px;
        margin: 5dvh auto;
    }
    .content-bubble {
    width: 80%;
    }
}
h3 {
    font-weight: bold;
    font-size: max(32px, 3dvh);
    text-shadow: 2px 2px 0 var(--darkblue);

}

p {
    font-weight: normal;
    font-size: max(20px, 2dvh);
}

